# flutter_pdfium

./: .gitignore  .pubignore  .releaserc.json  CHANGELOG.md  LICENSE  README.md  ast-mapper.py  ffigen.yaml  justfile  melos.yaml  pubspec.yaml
.github/workflows/: release.yml
.old/: .gitignore  README.md  justfile  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .pubignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/ch/cbue/flutter_pdfium_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: .gitignore  main.dart
example/lib/views/: bookmarks_view.dart  bookmarks_viewmodel.dart  in_memory_view.dart  in_memory_viewmodel.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_pdfium.podspec
lib/: .gitignore  flutter_pdfium.dart  flutter_pdfium_bindings_generated.dart
lib/src/: pdfium.dart
lib/src/pdf/: document.dart  errors.dart  native_lib.dart  page.dart  pdf_worker.dart
lib/src/utils/: lazy.dart
lib/src/widgets/: page_renderer.dart
linux/: CMakeLists.txt
macos/: flutter_pdfium.podspec
macos/Classes/: flutter_pdfium.c
src/: CMakeLists.txt  flutter_pdfium.c  flutter_pdfium.h
tools/: ast-mapper.py
windows/: .gitignore  CMakeLists.txt
